test/parsetest/invalid/missingParen.java
class C {
  public void test(int x { return 0; }
}
